# wally

./: .gitignore  CLAUDE.md  IDEAS.md  README.md  classification.example.toml  conftest.py  pyproject.toml  wally.example.toml
.github/workflows/: ci.yml
demo/: run_wally_demo_gif.mov  wally_annotate_demo_gif.mov  wally_init_demo_gif.mov
src/: __init__.py  annotate.py  cli.py  init_cmd.py  report.py
src/budget/: CLAUDE.md  __init__.py  config.py
src/classification/: CLAUDE.md  __init__.py  config.py
src/download/: __init__.py  base.py  cibc.py  rbc.py  runner.py
src/ingestion/: __init__.py  cache.py  discovery.py
src/parsers/: CLAUDE.md  __init__.py  base.py  cibc.py  rbc.py
src/reconciliation/: CLAUDE.md  __init__.py
statements/: CLAUDE.md
tests/: CLAUDE.md  test_annotate.py  test_cli.py  test_init_cmd.py  test_render.py
tests/budget/: test_aggregate.py  test_config.py  test_status.py
tests/classification/: test_classify.py  test_config.py
tests/fixtures/: README.md
tests/ingestion/: test_cache.py  test_discovery.py
tests/parsers/: test_cibc.py  test_rbc.py
tests/reconciliation/: test_gates.py
